tests/snapshots/assets__check_file@raw.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/raw.typ
---
```rs
let a = 1;
```

```rs
  let a = 1;
```

#[
  ```rs
  let a = 1;
  ```
]

#{
  ```rs
  let a = 1;
  ```
}
