tests/snapshots/assets__check_file@show-closure.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/show/show-closure.typ
---
#show heading.where(
  level: 1,
): it => box(width: 100%)[
  #v(0.5em)
  #set align(center)
  #set heading(numbering: "一")
  #it
  #v(0.75em)
]
